Implement Online Copy
